Assignment3/src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'/'", "'*'", "'<>'", "'='", "'<'", "'>'", 
                     "'<='", "'>='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "':'", "';'", "','", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BLOCKCOMMENT1", "BLOCKCOMMENT2", 
                      "LINECOMMENT", "PLUS", "MINUS", "SLASH", "STAR", "NOTEQ", 
                      "EQ", "LT", "GT", "LE", "GE", "LB", "RB", "LCB", "RCB", 
                      "LSB", "RSB", "COLON", "SEMI", "COMMA", "DOTDOT", 
                      "WS", "INTLIT", "REALLIT", "BOOLLIT", "ILLEGAL_ESCAPE", 
                      "STRINGLIT", "UNCLOSE_STRING", "BREAK", "CONTINUE", 
                      "FOR", "TO", "DOWNTO", "DO", "IF", "THEN", "ELSE", 
                      "RETURN", "WHILE", "BEGIN", "END", "FUNCTION", "PROCEDURE", 
                      "VAR", "TRUE", "FALSE", "ARRAY", "OF", "REAL", "BOOLEAN", 
                      "INTEGER", "STRING", "NOT", "AND", "OR", "DIV", "MOD", 
                      "WITH", "ID", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_varDeclare = 2
    RULE_varDeclareOne = 3
    RULE_idlist = 4
    RULE_funcDeclare = 5
    RULE_procDeclare = 6
    RULE_expr = 7
    RULE_exp1 = 8
    RULE_exp2 = 9
    RULE_exp3 = 10
    RULE_exp4 = 11
    RULE_exp5 = 12
    RULE_indexExpr = 13
    RULE_invoke = 14
    RULE_expList = 15
    RULE_compStmt = 16
    RULE_listOfStmt = 17
    RULE_statement = 18
    RULE_assignment = 19
    RULE_lhs = 20
    RULE_ifStmt = 21
    RULE_whileStmt = 22
    RULE_forStmt = 23
    RULE_breakStmt = 24
    RULE_contStmt = 25
    RULE_retStmt = 26
    RULE_withStmt = 27
    RULE_callStmt = 28
    RULE_mptype = 29
    RULE_primtype = 30
    RULE_arraytype = 31

    ruleNames =  [ "program", "decl", "varDeclare", "varDeclareOne", "idlist", 
                   "funcDeclare", "procDeclare", "expr", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "indexExpr", "invoke", "expList", 
                   "compStmt", "listOfStmt", "statement", "assignment", 
                   "lhs", "ifStmt", "whileStmt", "forStmt", "breakStmt", 
                   "contStmt", "retStmt", "withStmt", "callStmt", "mptype", 
                   "primtype", "arraytype" ]

    EOF = Token.EOF
    T__0=1
    BLOCKCOMMENT1=2
    BLOCKCOMMENT2=3
    LINECOMMENT=4
    PLUS=5
    MINUS=6
    SLASH=7
    STAR=8
    NOTEQ=9
    EQ=10
    LT=11
    GT=12
    LE=13
    GE=14
    LB=15
    RB=16
    LCB=17
    RCB=18
    LSB=19
    RSB=20
    COLON=21
    SEMI=22
    COMMA=23
    DOTDOT=24
    WS=25
    INTLIT=26
    REALLIT=27
    BOOLLIT=28
    ILLEGAL_ESCAPE=29
    STRINGLIT=30
    UNCLOSE_STRING=31
    BREAK=32
    CONTINUE=33
    FOR=34
    TO=35
    DOWNTO=36
    DO=37
    IF=38
    THEN=39
    ELSE=40
    RETURN=41
    WHILE=42
    BEGIN=43
    END=44
    FUNCTION=45
    PROCEDURE=46
    VAR=47
    TRUE=48
    FALSE=49
    ARRAY=50
    OF=51
    REAL=52
    BOOLEAN=53
    INTEGER=54
    STRING=55
    NOT=56
    AND=57
    OR=58
    DIV=59
    MOD=60
    WITH=61
    ID=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.decl()
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 69
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclare(self):
            return self.getTypedRuleContext(MPParser.VarDeclareContext,0)


        def funcDeclare(self):
            return self.getTypedRuleContext(MPParser.FuncDeclareContext,0)


        def procDeclare(self):
            return self.getTypedRuleContext(MPParser.ProcDeclareContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.varDeclare()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.funcDeclare()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.procDeclare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def varDeclareOne(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarDeclareOneContext)
            else:
                return self.getTypedRuleContext(MPParser.VarDeclareOneContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_varDeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclare" ):
                return visitor.visitVarDeclare(self)
            else:
                return visitor.visitChildren(self)




    def varDeclare(self):

        localctx = MPParser.VarDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(MPParser.VAR)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.varDeclareOne()
                self.state = 78
                self.match(MPParser.SEMI)
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclareOneContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MPParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_varDeclareOne

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclareOne" ):
                return visitor.visitVarDeclareOne(self)
            else:
                return visitor.visitChildren(self)




    def varDeclareOne(self):

        localctx = MPParser.VarDeclareOneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclareOne)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.idlist()
            self.state = 85
            self.match(MPParser.COLON)
            self.state = 86
            self.mptype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MPParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(MPParser.ID)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 89
                self.match(MPParser.COMMA)
                self.state = 90
                self.match(MPParser.ID)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def compStmt(self):
            return self.getTypedRuleContext(MPParser.CompStmtContext,0)


        def varDeclareOne(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarDeclareOneContext)
            else:
                return self.getTypedRuleContext(MPParser.VarDeclareOneContext,i)


        def varDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarDeclareContext)
            else:
                return self.getTypedRuleContext(MPParser.VarDeclareContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_funcDeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclare" ):
                return visitor.visitFuncDeclare(self)
            else:
                return visitor.visitChildren(self)




    def funcDeclare(self):

        localctx = MPParser.FuncDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MPParser.FUNCTION)
            self.state = 97
            self.match(MPParser.ID)
            self.state = 98
            self.match(MPParser.LB)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 99
                self.varDeclareOne()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 100
                    self.match(MPParser.SEMI)
                    self.state = 101
                    self.varDeclareOne()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 109
            self.match(MPParser.RB)
            self.state = 110
            self.match(MPParser.COLON)
            self.state = 111
            self.mptype()
            self.state = 112
            self.match(MPParser.SEMI)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.VAR:
                self.state = 113
                self.varDeclare()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.compStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def compStmt(self):
            return self.getTypedRuleContext(MPParser.CompStmtContext,0)


        def varDeclareOne(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarDeclareOneContext)
            else:
                return self.getTypedRuleContext(MPParser.VarDeclareOneContext,i)


        def varDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarDeclareContext)
            else:
                return self.getTypedRuleContext(MPParser.VarDeclareContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_procDeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcDeclare" ):
                return visitor.visitProcDeclare(self)
            else:
                return visitor.visitChildren(self)




    def procDeclare(self):

        localctx = MPParser.ProcDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(MPParser.PROCEDURE)
            self.state = 122
            self.match(MPParser.ID)
            self.state = 123
            self.match(MPParser.LB)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 124
                self.varDeclareOne()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 125
                    self.match(MPParser.SEMI)
                    self.state = 126
                    self.varDeclareOne()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 134
            self.match(MPParser.RB)
            self.state = 135
            self.match(MPParser.SEMI)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.VAR:
                self.state = 136
                self.varDeclare()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.compStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def expr(self):
            return self.getTypedRuleContext(MPParser.ExprContext,0)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.exp1()
            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 147
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 152
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MPParser.AND]:
                        self.state = 148
                        self.match(MPParser.AND)
                        self.state = 149
                        self.match(MPParser.THEN)
                        pass
                    elif token in [MPParser.OR]:
                        self.state = 150
                        self.match(MPParser.OR)
                        self.state = 151
                        self.match(MPParser.ELSE)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 154
                    self.exp1() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Exp2Context)
            else:
                return self.getTypedRuleContext(MPParser.Exp2Context,i)


        def EQ(self):
            return self.getToken(MPParser.EQ, 0)

        def NOTEQ(self):
            return self.getToken(MPParser.NOTEQ, 0)

        def LT(self):
            return self.getToken(MPParser.LT, 0)

        def LE(self):
            return self.getToken(MPParser.LE, 0)

        def GT(self):
            return self.getToken(MPParser.GT, 0)

        def GE(self):
            return self.getToken(MPParser.GE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp1" ):
                return visitor.visitExp1(self)
            else:
                return visitor.visitChildren(self)




    def exp1(self):

        localctx = MPParser.Exp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exp1)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.exp2(0)
                self.state = 161
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.NOTEQ) | (1 << MPParser.EQ) | (1 << MPParser.LT) | (1 << MPParser.GT) | (1 << MPParser.LE) | (1 << MPParser.GE))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 162
                self.exp2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.exp2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(MPParser.Exp2Context,0)


        def PLUS(self):
            return self.getToken(MPParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MPParser.MINUS, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp2" ):
                return visitor.visitExp2(self)
            else:
                return visitor.visitChildren(self)



    def exp2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_exp2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.exp3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 175
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Exp2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp2)
                    self.state = 170
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 171
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.PLUS) | (1 << MPParser.MINUS) | (1 << MPParser.OR))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 172
                    self.exp3(0) 
                self.state = 177
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def STAR(self):
            return self.getToken(MPParser.STAR, 0)

        def SLASH(self):
            return self.getToken(MPParser.SLASH, 0)

        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def MOD(self):
            return self.getToken(MPParser.MOD, 0)

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp3" ):
                return visitor.visitExp3(self)
            else:
                return visitor.visitChildren(self)


